# util_udm

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: pragma-generic-ci.yml  pragma-linux-ci.yml  pragma-windows-ci.yml
examples/: CMakeLists.txt
examples/sample_application/: CMakeLists.txt
include/: udm.hpp  udm_basic_types.hpp  udm_conversion.hpp  udm_definitions.hpp  udm_enums.hpp  udm_exception.hpp  udm_trivial_types.hpp  udm_type_structs.hpp  udm_types.hpp
src/: array.cpp  ascii.cpp  c_wrapper.cpp  data.cpp  definitions.hpp  element.cpp  file.cpp  hash.cpp  iterators.cpp  json.cpp  linked_property_wrapper.cpp  property.cpp  property_wrapper.cpp  types.cpp  util.cpp  util_udm.cpp
src/implementation/: array.cpp  ascii.cpp  c_wrapper.cpp  data.cpp  element.cpp  hash.cpp  iterators.cpp  json.cpp  linked_property_wrapper.cpp  property.cpp  property_wrapper.cpp  util.cpp  wrapper_funcs.cpp
src/interface/: array.cppm  array_iterator.cppm  asset_data.cppm  basic_types.cppm  blob.cppm  conversion.cppm  core.cppm  data.cppm  element.cppm  enums.cppm  exception.cppm  file.cppm  half.cppm  merged.cppm  property.cppm  property_wrapper.cppm  reference.cppm  string.cppm  struct.cppm  trivial_types.cppm  types.cppm  udm.cppm  util.cppm  wrapper_funcs.cppm  wrapper_funcs_impl.cppm
